crates/wac-parser/tests/resolution/fail/export-conflict-world.wac
package test:comp;

import f: func();

world foo {

}

export f as "foo";
